php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #31055 apache2filter: per request leak proportional to the full path of the request URI
Submitted: 2004-12-10 16:56 UTC Modified: 2005-01-07 07:31 UTC
From: kameshj at fastmail dot fm Assigned:
Status: Closed Package: Apache2 related
PHP Version: 4CVS, 5CVS (2004-12-30) OS: *
Private report: No CVE-ID: None
 [2004-12-10 16:56 UTC] kameshj at fastmail dot fm
Description:
------------
SG(request_info).path_translated is not getting freed from php_apache_request_dtor of sapi/apache2filter/sapi_apache2.c

Find the patch at the following location
http://puggy.symonds.net/~kameshj/apache2perrequestmemleak.patch

Reproduce code:
---------------
any web php request to apache2 server.

Expected result:
----------------
No per request leak.

Actual result:
--------------
Leaks proportional to the absolute path of URI requested(path_translated).

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2005-01-07 07:31 UTC] sniper@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Sat Sep 26 18:00:02 2026 UTC