- Fixed bug #31055 (apache2filter: per request leak proportional to the full path of the request URI)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@176603 c90b9560-bf6c-de11-be94-00142212c4b1